Made get  books handler with filters. ? Add filters (what kind of) ? Add sort fields (what kind of)
Added genres seed
