# api_gateway/internal/handlers/book/handler.go
@@ -6,6 +6,7 @@ import (
 	"fmt"
 	"io"
 	"net/http"
+	"net/url"
 	"strings"
 
 	"github.com/julienschmidt/httprouter"
@@ -17,12 +18,14 @@ import (
 
 const (
 	url_add_book = "/api/v1/books"
+	url_get_book = "/api/v1/books"
 )
 
 //go:generate mockgen -source=handler.go -destination=mocks/service_mock.go
 
 type BookService interface {
 	AddBook(ctx context.Context, body io.Reader, contentType string) (*model.Book, error)
+	FindBooks(ctx context.Context, params url.Values) ([]*model.Book, error)
 }
 type JwtService interface {
 	Middleware(h http.HandlerFunc, roles ...string) http.HandlerFunc
@@ -36,6 +39,7 @@ type Handler struct {
 
 func (h *Handler) Register(router *httprouter.Router) {
 	router.HandlerFunc(http.MethodPost, url_add_book, h.JwtService.Middleware(h.Logger.Middleware(mw.Middleware(h.AddBook)), "admin"))
+	router.HandlerFunc(http.MethodGet, url_get_book, h.Logger.Middleware(mw.Middleware(h.FindBooks)))
 	h.Logger.Info("book handlers registered")
 }
 
@@ -63,6 +67,30 @@ func (h *Handler) AddBook(w http.ResponseWriter, r *http.Request) error {
 	}
 	w.WriteHeader(http.StatusCreated)
 	bookByte, _ := json.Marshal(book)
+	w.Write(bookByte)
+	return nil
+}
+
+// @Summary Finds a books by filters
+// @Description Author and genres are fetching from another microservices and then storing in cache
+// @Description If it's impossible to fetch author or genres, the field will be null
+// @Tags books
+// @Produce json
+// @Param offset query string true "Offset to books. Must be present, starting with 0"
+// @Param limit query string true "Max amount of docs to return. Must be greater than 0"
+// @Success 200 {array} model.Book "Successful response"
+// @Failure 400 {object} errormiddleware.Error "Returns if query was incorrect"
+// @Failure 404 {object} errormiddleware.Error "Returns if there are no documents found"
+// @Failure 500 {object} errormiddleware.Error "Returns when there's some internal error that needs to be fixed or smtp server is not responding"
+// @Router /books [get]
+func (h *Handler) FindBooks(w http.ResponseWriter, r *http.Request) error {
+	books, err := h.BookService.FindBooks(r.Context(), r.URL.Query())
+	if err != nil {
+		return err
+	}
+
+	w.WriteHeader(http.StatusOK)
+	bookByte, _ := json.Marshal(books)
 	w.Write(bookByte)
 	return nil
 }
